merged revisions 1028, 1034, 1052-1053, 1067-1071